# ml_template

./: .env.example  README.md  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt
configs/: config.yaml
configs/callbacks/: default.yaml
configs/datamodule/: cifar10.yaml  text.yaml
configs/experiment/: exp1.yaml  transformer_base.yaml  transformer_small.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: resnet.yaml  transformer_decoder.yaml  transformer_encoder.yaml  transformer_seq2seq.yaml
configs/optimizer/: adam.yaml  adamw_transformer.yaml
configs/paths/: default.yaml
configs/scheduler/: cosine.yaml  warmup_cosine.yaml
configs/trainer/: default.yaml  transformer.yaml
docs/: architecture.md  file_structure.md  requirements.md
src/: __init__.py  eval.py  export.py  predict.py  train.py
src/callbacks/: __init__.py
src/data/: __init__.py
src/metrics/: __init__.py
src/models/: __init__.py
src/modules/: __init__.py
